Add openAPI generator
