# examples/room-manager/openapi.yaml
@@ -1,98 +1,100 @@
----
-components:
-  responses: {}
-  schemas:
-    Error:
-      type: string
-    ConnectionData:
-      title: ConnectionData
-      type: object
-      required:
-        - url
-        - token
-      properties:
-        url:
-          type: string
-          example: ws://localhost:8080/socket/peer/websocket
-        token:
-          type: string
-          example: SFMyNTY.g2gDdAAhiOL4CdsaboT9-jtMzhoI
+openapi: 3.0.0
 info:
   title: Room manager
   version: 0.1.0
-openapi: 3.0.0
+components:
+  schemas: {}
 paths:
-  /api/rooms/{roomName}/users/{userName}:
+  /health:
     get:
-      callbacks: {}
-      description: Create a new peer in a room and get its token
-      operationId: "getToken"
+      responses:
+        "200":
+          description: Default Response
+  /api/rooms/{roomName}/users/{username}:
+    get:
+      operationId: getToken
       parameters:
-        - description: Room ID
+        - schema:
+            type: string
           in: path
           name: roomName
           required: true
-          schema:
+        - schema:
             type: string
-        - description: User ID
           in: path
-          name: userName
+          name: username
           required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema: {}
-        description: Room params
-        required: false
       responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ConnectionData'
-          description: Room response
-        '503':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: Error
-      summary: Join a room
-      tags:
-        - room
-  # TODO Implement recordings
-  /api/room/{roomName}/startRecording:
-    post:
-      callbacks: {}
-      description: Starts recording in the specified room
-      operationId: "startRecording"
-      parameters:
-        - description: Room name
-          in: path
-          name: roomName
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
+        "200":
+          description: Default Response
           content:
             application/json:
               schema:
                 type: object
-                required:
-                  - status
                 properties:
-                  status:
+                  token:
                     type: string
-                    example: "OK"
-          description: Recording started response
-      summary: Start recording in a room
-      tags:
-        - room
-security: []
+                  url:
+                    type: string
+                  room:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      name:
+                        type: string
+                  username:
+                    type: string
+                  peer:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                required:
+                  - token
+                  - url
+        "410":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  path:
+                    type: string
+                  method:
+                    type: string
+                required:
+                  - error
+        "500":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                  path:
+                    type: string
+                  method:
+                    type: string
+                  cause:
+                    type: string
+                required:
+                  - error
+  /webhook:
+    post:
+      responses:
+        "200":
+          description: Default Response
 servers:
   - url: http://localhost:5004
-    variables: {}
-tags: []
+    description: Development server
+tags:
+  - name: user
+    description: User related end-points
+  - name: code
+    description: Code related end-points
